fix where display name could overlap buttons on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,7 +119,8 @@ $fontFamily:        'Open Sans', Helvetica, Tahoma, Arial, sans-serif;
       box-sizing: border-box;
     }
     .is-small.has-avatar & {
-      top: 28px;
+      top: 44px;
+      padding: 0px 20px;
     }
   }
 
